<resources>
    <string name="app_name">DaysCountUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="sync">sync</string>
    <string name="settings">settings</string>

    <!-- Main -->
    <string name="swipe_to_delete_text">DELETE</string>

    <!-- Settings -->
    <string name="settings_appbar_title">Settings</string>
    <string name="sync_header">Sync</string>
    <string name="test_header">Developer</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="truncate_alert_title">Do you want to truncate your database?</string>
    <string name="truncate_alert_message">All data will lost</string>
    <string name="truncate_alert_cancel">Cancel</string>
    <string name="truncate_alert_accept">Accept</string>

    <!-- Edit -->
    <string name="edit_appbar_title">Edit/ Update Event</string>
    <string name="task_title">Event Description</string>
    <string name="task_input_default">Please input your task description</string>
    <string name="date_title">Date</string>
    <string name="date_input_default">05312020</string>
    <string name="celebrate_100_days_title">Celebrate 100 days</string>
    <string name="celebrate_anniversary">Celebrate the anniversary</string>
    <string name="celebrate_custom_days">Celebrate your days</string>
    <string name="edit_activity_button_text">Submit</string>
    <string name="update_btn">UPDATE</string>
    <string name="icon_pick_text">Pick up an Icon</string>
    <string name="hint_year">YYYY</string>
    <string name="hint_month">MM</string>
    <string name="hint_day">DD</string>

    <string name="allow_notification_title">Allow Notification</string>

    <string name="notification_text_100_days">It has been 100 days since you set up the notification</string>
    <string name="notification_text_anniversary">It is the anniversary!</string>
    <string name="notification_text_custom_prefix">It has been </string>
    <string name="notification_text_custom_tail"> days since you set up the notification</string>

    <!-- sign in -->
    <string name="login_appbar_title">Login to sync</string>
    <string name="sign_out_btn_text">Sign out</string>
    <string name="fetch_data_btn">Fetch Data from the server</string>
    <string name="sign_in_text">Sign in with Google to sync your data</string>
    <string name="signed_in_text">You have all set, the synchronization will conducted in the background</string>
    
    <!-- widget -->
    <string name="widget_btn_text">Go to the App!</string>
    <string name="widget_text_default">There is nothing here. Add some events!</string>
    <string name="widget_text_prefix">Your newest added event is: </string>

    <!-- Accessibility -->
    <!-- ContentDescriptions-->
    <string name="activity_edit_et_task_desc_content_description">You should enter your event description</string>
    <string name="activity_edit_et_month_content_description">You should enter the month here</string>
    <string name="activity_edit_et_day_content_description">You should enter the day here</string>
    <string name="activity_edit_et_year_content_description">You should enter the year here</string>
    <string name="activity_edit_et_custom_content_description">You can enter your custom notification day</string>
    <string name="activity_edit_switch_100_content_description">Switch on to allow 100-day notification</string>
    <string name="activity_edit_switch_anniversary_content_description">Switch on to allow anniversary notification</string>
    <string name="activity_edit_switch_allow_notification_content_description">Switch on to allow notification</string>
    <string name="activity_edit_image_chosen_icon_content_description">Here is the icon you chosen</string>
    <string name="activity_edit_button_content_description">Press here to submit or update your event</string>

    <string name="activity_login_sign_in_button_content_description">Press here to login to your Google account to activate sync function</string>
    <string name="activity_sign_out_button_content_description">Press here to log out your Google account</string>
    <string name="activity_fetch_data_button_content_description">Press here to retrieve data from the server</string>

    <string name="task_layout_image_chosen_icon_content_description">Here is the icon you chosen</string>

    <string name="app_bar_sync_button_content_description">Press here to sync with your Google account</string>
    <string name="app_bar_settings_button_content_description">Press here to get into the settings page</string>


</resources>
